# hydraulic-erosion-simulator

./: .gitignore  README.md  fast_erosion.py  fast_erosion_algorithm.py  fast_erosion_engine.py  fast_erosion_example1.py  fast_erosion_example2.py  fast_erosion_example3.py  fast_erosion_example4.py  graphics.py  height_map.py  heightmap_diffusion.py  heightmap_diffusion_with_evaporation_precipitation_erosion.py  partial_transport_1d.py  particle_simulation.py  particle_simulation_free_floating.py  pyproject.toml  requirements.txt  shaker.py  shaker2d.py  shaker_engine.py  shaker_example1.py  shaker_example3.py
examples/: fast_erosion_example1.py  fast_erosion_example2.py  fast_erosion_example3.py  fast_erosion_example4.py
old/: graphics.py  heightmap_diffusion.py  heightmap_diffusion_with_evaporation_precipitation_erosion.py  partial_transport_engine.py  partial_transport_example1.py  partial_transport_example2.py  partial_transport_example3.py  partial_transport_example4.py  partial_transport_example5.py  particle_simulation.py  particle_simulation_free_floating.py
src/: algo2.py  algorithm.py  cli.py  demo2.py  engine.py  fast_erosion_algorithm.py  fast_erosion_engine.py  gui.py  gui_utils.py  height_map.py  hydraulic_erosion_simulator.py  new_simulator.py
