[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hydraulic_erosion_simulator"
version = "0.0.1"
authors = [
  { name="keepitwiel", email="keepitwiel@protonmail.com" },
]
description = "A simple hydraulic erosion simulator."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
"Homepage" = "https://github.com/keepitwiel/hydraulic-erosion-simulator"
